--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mtillman
   manager: daveba
   ms.date: 05/29/2020
-  ms.openlocfilehash: b60e20bdb5dcb35cdeadb6f8d1b6862192a0916a
-  ms.sourcegitcommit: 61d850bc7f01c6fafee85bda726d89ab2ee733ce
+  ms.openlocfilehash: 13e69e5f45244be79d06b0014d32e5c8192c777c
+  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/03/2020
-  ms.locfileid: "84345200"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86038066"
 highlightedContent:
   items:
   - title: 什么是 Azure AD？
@@ -42,15 +42,15 @@ conceptualContent:
   items:
   - title: 应用程序管理
     links:
-    - url: ./manage-apps/what-is-single-sign-on.md
-      itemType: concept
-      text: 什么是单一登录 (SSO)？
-    - url: ./manage-apps/configure-single-sign-on-non-gallery-applications.md
-      itemType: concept
-      text: 配置基于 SAML 的 SSO
-    - url: ./manage-apps/application-proxy.md
-      itemType: concept
-      text: 本地应用的应用程序代理
+    - url: ./manage-apps/what-is-application-management.md
+      itemType: overview
+      text: 什么是应用程序管理？
+    - url: ./manage-apps/view-applications-portal.md
+      itemType: quickstart
+      text: 查看使用你的租户进行标识管理的应用
+    - url: ./manage-apps/add-application-portal-setup-sso.md
+      itemType: quickstart
+      text: 设置基于 SAML 的 SSO
     footerLink:
       url: ./manage-apps/index.yml
       text: 查看详细信息
