--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -40,13 +40,15 @@
             - name: 应用服务
               href: ./move-limitations/app-service-move-limitations.md
             - name: Azure DevOps
-              href: /azure/devops/organizations/billing/change-azure-subscription?toc=/azure/azure-resource-manager/toc.json
+              href: /azure/devops/organizations/billing/change-azure-subscription?toc=/azure/azure-resource-manager/management/toc.json
+            - name: Azure 自动化
+              href: ../../automation/how-to/move-account.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 经典部署
               href: ./move-limitations/classic-model-move-limitations.md
             - name: 网络
               href: ./move-limitations/networking-move-limitations.md
             - name: 恢复服务
-              href: ../../backup/backup-azure-move-recovery-services-vault.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../backup/backup-azure-move-recovery-services-vault.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 虚拟机
               href: ./move-limitations/virtual-machines-move-limitations.md
     - name: 移动 - 区域
@@ -58,39 +60,39 @@
         - name: 服务
           items:
             - name: Azure API 管理
-              href: ../../api-management/api-management-howto-migrate.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../api-management/api-management-howto-migrate.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure 应用服务
-              href: ../../app-service/manage-move-across-regions.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../app-service/manage-move-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure 自动化
-              href: 'https://docs.microsoft.com/azure/automation/automation-managing-data#geo-replication-in-azure-automation?toc=/azure/azure-resource-manager/toc.json'
+              href: ../../automation/automation-managing-data.md?toc=/azure/azure-resource-manager/management/toc.json#geo-replication-in-azure-automation
             - name: Azure 批处理
-              href: 'https://docs.microsoft.com/azure/batch/best-practices#moving-batch-accounts-across-regions?toc=/azure/azure-resource-manager/toc.json'
+              href: ../../batch/best-practices.md?toc=/azure/azure-resource-manager/management/toc.json#moving-batch-accounts-across-regions
             - name: Azure 认知搜索
-              href: ../../search/search-howto-move-across-regions.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../search/search-howto-move-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure Dev Spaces
-              href: 'https://docs.microsoft.com/azure/dev-spaces/faq#can-i-migrate-my-aks-cluster-with-azure-dev-spaces-to-another-region?toc=/azure/azure-resource-manager/toc.json'
+              href: ../../dev-spaces/faq.md?toc=/azure/azure-resource-manager/management/toc.json#can-i-migrate-my-aks-cluster-with-azure-dev-spaces-to-another-region
             - name: Azure 事件中心
-              href: ../../event-hubs/move-across-regions.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../event-hubs/move-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure IoT 中心
-              href: ../../iot-hub/iot-hub-how-to-clone.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../iot-hub/iot-hub-how-to-clone.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure VM
-              href: ../../site-recovery/azure-to-azure-tutorial-migrate.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../site-recovery/azure-to-azure-tutorial-migrate.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure 存储
-              href: ../../storage/common/storage-account-move.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../storage/common/storage-account-move.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Azure SQL
-              href: ../../sql-database/sql-database-move-resources-across-regions.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../sql-database/sql-database-move-resources-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 逻辑应用
-              href: ../../logic-apps/move-logic-app-resources.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../logic-apps/move-logic-app-resources.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 维护控制配置
-              href: ../../virtual-machines/move-region-maintenance-configuration.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../virtual-machines/move-region-maintenance-configuration.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 网络安全组 (NSG)
-              href: ../../virtual-network/move-across-regions-nsg-portal.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../virtual-network/move-across-regions-nsg-portal.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 公共 IP 地址
-              href: ../../virtual-network/move-across-regions-publicip-portal.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../virtual-network/move-across-regions-publicip-portal.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: Site Recovery（恢复服务保管库）
-              href: ../../site-recovery/move-vaults-across-regions.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../site-recovery/move-vaults-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
             - name: 虚拟网络
-              href: ../../virtual-network/move-across-regions-nsg-portal.md?toc=/azure/azure-resource-manager/toc.json
+              href: ../../virtual-network/move-across-regions-nsg-portal.md?toc=/azure/azure-resource-manager/management/toc.json
     - name: Tags
       items:
         - name: 决策指南
