--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -41,10 +41,14 @@
       href: ../../automation/security-baseline.md
     - name: Azure Cache for Redis 安全基线
       href: ../../azure-cache-for-redis/security-baseline.md
+    - name: Azure Policy 安全基线
+      href: ../../governance/policy/concepts/azure-security-benchmark-baseline.md
     - name: 备份安全基线
       href: ../../backup/security-baseline.md
     - name: Batch 安全基线
       href: ../../batch/security-baseline.md
+    - name: 认知服务的安全基线
+      href: ../../cognitive-services/security-baseline.md
     - name: 容器实例安全基线
       href: ../../container-instances/security-baseline.md
     - name: 容器注册表安全基线
@@ -53,7 +57,7 @@
       href: ../../cosmos-db/security-baseline.md
     - name: 客户密码箱安全基线
       href: ../fundamentals/customer-lockbox-security-baseline.md
-    - name: Databox 安全基线
+    - name: Data Box 安全基线
       href: ../../databox/security-baseline.md
     - name: 数据资源管理器安全基线
       href: /azure/data-explorer/security-baseline
@@ -87,3 +91,5 @@
       href: ../../stream-analytics/security-baseline.md
     - name: 存储安全基线
       href: ../../storage/common/security-baseline.md
+    - name: Synapse Analytics 安全基线
+      href: ../../synapse-analytics/security-baseline.md
