commit translated contents

--- a/articles/azure-resource-manager/managed-applications/index.yml
+++ b/articles/azure-resource-manager/managed-applications/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: tfitzmac
   ms.author: tomfitz
   ms.date: 01/02/2020
-  ms.openlocfilehash: 60f7d4b9c9bd9057e0869b3efe1843eeb8d873f8
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: 15cd46ba2758fd1a56f7d19791713eae72bac1d2
+  ms.sourcegitcommit: bcb962e74ee5302d0b9242b1ee006f769a94cfb8
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "75648372"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86057647"
 landingContent:
 - title: 关于托管应用程序
   linkLists:
@@ -36,7 +36,7 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: 发布应用程序定义
-      url: publish-managed-app-definition-quickstart.md
+      url: ./publish-service-catalog-app.md
     - text: 部署服务目录应用
       url: deploy-service-catalog-quickstart.md
   - linkListType: tutorial
