--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -403,9 +403,9 @@
         - name: Dynamics AX
           href: site-recovery-dynamicsax.md
         - name: RDS
-          href: 'site-recovery-workload.md#protect-remote-desktop-services'
+          href: site-recovery-workload.md#protect-remote-desktop-services
         - name: Exchange
-          href: 'site-recovery-workload.md#protect-exchange'
+          href: site-recovery-workload.md#protect-exchange
         - name: SAP
           href: site-recovery-sap.md
         - name: 文件服务器
@@ -415,7 +415,7 @@
         - name: Citrix XenApp 和 XenDesktop
           href: site-recovery-citrix-xenapp-and-xendesktop.md
         - name: 其他工作负荷
-          href: 'site-recovery-workload.md#workload-summary'
+          href: site-recovery-workload.md#workload-summary
     - name: 灾难恢复到辅助站点
       items:
         - name: VMware VM/物理服务器
@@ -509,7 +509,7 @@
 - name: 相关内容
   items:
     - name: Azure 自动化
-      href: /azure/automation/
+      href: ../automation/index.yml
 - name: 资源
   items:
     - name: Azure 路线图
@@ -517,7 +517,7 @@
     - name: 博客
       href: 'https://azure.microsoft.com/blog/tag/azure-site-recovery/'
     - name: Microsoft Q&A 问题页面
-      href: 'https://docs.microsoft.com/answers/topics/azure-site-recovery.html'
+      href: /answers/topics/azure-site-recovery.html
     - name: 学习路径
       href: /learn/azure/
     - name: 定价
